<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkAccent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="18dp"
        tools:context=".ui.activities.DetailActivity">

        <ImageView
            android:id="@+id/iv_backdrop"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:background="@drawable/fg_backdrop"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="150dp"
            android:layout_height="230dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_backdrop"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@id/iv_poster"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_backdrop"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@id/iv_poster"
            android:text="@string/rate"
            android:textSize="14sp"
            android:textColor="@color/white"/>

        <RatingBar
            android:id="@+id/rb_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_rate"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/iv_poster"
            android:numStars="5"
            android:stepSize="0.1"
            android:progressTint="@color/white"
            android:progressBackgroundTint="@color/white"/>

        <TextView
            android:id="@+id/label_first_air_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rb_rating"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/iv_poster"
            android:text="@string/first_air_date"
            android:textSize="14sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_first_air_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_first_air_date"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/iv_poster"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rb_rating"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/label_first_air_date"
            android:text="@string/last_air_date"
            android:textSize="14sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_last_air_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_first_air_date"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@id/tv_first_air_date"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/label_season"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_first_air_date"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/iv_poster"
            android:text="@string/season"
            android:textSize="14sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_season"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_season"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/iv_poster"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/label_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_last_air_date"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/label_first_air_date"
            android:text="@string/episode"
            android:textSize="14sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_episode"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@id/tv_first_air_date"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/label_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_poster"
            android:layout_marginStart="16dp"
            android:text="@string/overview"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_overview"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/tv_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/pemeran"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_below="@+id/tv_overview"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_cast"
            tools:listitem="@layout/recycler_view_cast" />

        <LinearLayout
            android:id="@+id/errorDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_below="@id/tv_overview">

            <ImageView
                android:layout_width="322dp"
                android:layout_height="229dp"
                android:background="@android:color/transparent"
                android:src="@drawable/empty"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="288dp"
                android:text="@string/data_tidak_ditemukan"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_gravity="center"/>
        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>